# sdlc

./: .gitignore  .gitmodules  .gitsubmodules  .sdlc.json  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ISSUE.md  PULL_REQUEST_TEMPLATE.md  README.md  example-config.json  file.json  go.mod  go.sum  index.html  main.go  main_test.go  mkdocs.yml  package.json  pyproject.toml  requirements.txt  sample-launchd-config.xml  sdlc  sdlc-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.kael_index/: file_tracker.json  vector_store.pkl  vector_store_call_graph.pkl  vector_store_import_graph.pkl
.planner/: features.md  issues.md  project_purpose.md  sprint.md  sprints.md
api/: main.go
app/: __init__.py  config.py  main.py
cmd/: commands.go  completion.go  dashboard.go  executor.go  export.go  export_logs.go  import.go  init.go  list.go  notification.go  plugins.go  plugins_test.go  prefix_writer.go  prefix_writer_test.go  root.go  root_test.go  status.go  summary.go  version.go  watcher.go  websocket.go  workflow.go
config/: config.go  config_test.go
docs/: api.md  cli.md  index.md  installation.md  usage.md
engine/: dirs.go  dirs_test.go  engine.go  engine_test.go  state.go  state_test.go
io/: input.go  input_test.go  output.go  output_test.go
lib/: buffered_writer.go  buffered_writer_test.go  color.go  executor.go  executor_test.go  skipdirs.go  syncwriter.go  syncwriter_test.go  task.go  task_test.go  visualization.go  visualization_test.go
log_exporter/: s3_exporter.go
metrics/: metrics.go
models/: build.go  command.go  (+6 more)
(+53 files in other folders)
